更改了app.json标题文本
将学生信息改为全部学生信息

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "学生信息",
+    "navigationBarTitleText": "全部学生信息",
     "navigationBarTextStyle":"black"
   }
 }
